Update regular expressions

--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -10,341 +10,99 @@
     "\n",
     "* [Regular Expressions](https://web.stanford.edu/~jurafsky/slp3/2.pdf), Chapter 2.1, Speech and Language Processing\n",
     "* [Regular Expression Operations](https://docs.python.org/3/library/re.html), Python Documentation\n",
+    "* [Regular Expression HOWTO](https://docs.python.org/3/howto/regex.html), Python Documentation\n",
     "* [Regular Expresions 101](https://regex101.com)\n",
     "\n",
     "### Contents\n",
     "\n",
-    "* [Tokenization](#Tokenization)\n",
-    "  * [Split by Whitespace](#Split-by-Whitespace)\n",
-    "  * [Substring Matching](#Substring-Matching)\n",
-    "  * [Function Definition](#Function-Definition)\n",
-    "  * [Exercise 1](#Exercise-1)\n",
-    "* [Regex Functions](#Regex-Functions)\n",
+    "* [Syntax](#Syntax)\n",
+    "  * [Grouping](#Grouping)\n",
+    "  * [Repetitions](#Repetitions)\n",
+    "  * [Special Characters](#Special-Characters)\n",
+    "* [Functions](#Regex-Functions)\n",
     "  * [match()](#match())\n",
     "  * [search()](#search())\n",
     "  * [findall()](#findall())\n",
     "  * [finditer()](#finditer())\n",
-    "  * [Tokenize with Regex](#Tokenize-with-Regex)\n",
-    "  * [Exercise 2](#Exercise-2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tokenization\n",
-    "\n",
-    "Most NLP applications require input text to be tokenized where each token represents a meaningful linguistic unit such as a word."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split by Whitespace\n",
-    "\n",
-    "It is easy to tokenize a string by whitespace using the `split()` function."
+    "* [Tokenization](#Tokenization)\n",
+    "  * [Exercise](#Exercise) \n",
+    "  * [Case Studies](#Case-Studies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mr.', 'Wayne', 'is', 'Batman']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = 'Mr. Wayne is Batman'\n",
-    "tokens = text.split()\n",
-    "print(tokens)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* [`str.split(sep=None, maxsplit=-1)`](https://docs.python.org/3/library/stdtypes.html?highlight=split#str.split)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "However, splitting by whitespaces can cause the resulting tokens to be noisy:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mr.', 'Wayne', \"isn't\", 'the', 'hero', 'we', 'need,', 'but', '\"the', 'one\"', 'we', 'deserve.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = 'Mr. Wayne isn\\'t the hero we need, but \"the one\" we deserve.'\n",
-    "tokens = text.split()\n",
-    "print(tokens)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* `\"isn't\"` &rarr; `['is', \"n't\"]`\n",
-    "* `'need,'` &rarr; `['need', ',']`\n",
-    "* `'\"the'` &rarr; `['\"', 'the']`\n",
-    "* `'one\"'` &rarr; `['one', '\"']`\n",
-    "* `'deserve.'` &rarr; `['deserve', '.']`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Substring Matching\n",
-    "\n",
-    "It is possible to resolve the above issues through subastring matching:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mr.', 'Wayne', 'is', 'Batman']\n"
-     ]
-    }
-   ],
-   "source": [
-    "STARTS = ['\"']\n",
-    "ENDS = [\"n't\", '.', ',', '\"']\n",
-    "\n",
-    "new_tokens = []\n",
-    "for token in tokens:\n",
-    "    start = next((t for t in STARTS if token.startswith(t)), None)\n",
-    "    if start:  # TODO: potential bug?\n",
-    "        n = len(start)\n",
-    "        t1 = token[:n]\n",
-    "        t2 = token[n:]\n",
-    "        new_tokens.extend([t1, t2])\n",
-    "        continue\n",
-    "    \n",
-    "    end = next((t for t in ENDS if token.endswith(t)), None)\n",
-    "    if end:\n",
-    "        n = len(end)\n",
-    "        t1 = token[:-n]\n",
-    "        t2 = token[-n:]\n",
-    "        if not (t1 == 'Mr' and t2 == '.'):\n",
-    "            new_tokens.extend([t1, t2])\n",
-    "            continue\n",
-    "\n",
-    "    new_tokens.append(token)\n",
-    "\n",
-    "print(new_tokens)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first parameter in the `next()` function creates an iterator:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>table {margin-left: 0 !important;}</style>"
+      ],
       "text/plain": [
-       "<generator object <genexpr> at 0x7fe6000f3ac0>"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "d = (t for t in STARTS if token.startswith(t))\n",
-    "print(d)"
+    "# to left-algin the tables below\n",
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>table {margin-left: 0 !important;}</style>\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [List Comprehensions](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions)\n",
-    "* [More on Lists](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)\n",
-    "* [`next(iterator[, default])`](https://docs.python.org/3/library/functions.html#next)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Function Definition\n",
+    "## Syntax\n",
     "\n",
-    "Let us convert the above code into a function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize_strmat_0(text):\n",
-    "    tokens = text.split()\n",
-    "    new_tokens = []\n",
-    "    \n",
-    "    for token in tokens:\n",
-    "        start = next((t for t in STARTS if token.startswith(t)), None)\n",
-    "        if start:\n",
-    "            n = len(start)\n",
-    "            t1 = token[:n]\n",
-    "            t2 = token[n:]\n",
-    "            new_tokens.extend([t1, t2])\n",
-    "            continue\n",
+    "Regular expressions provide powerful ways to match strings and beyond.\n",
     "\n",
-    "        end = next((t for t in ENDS if token.endswith(t)), None)\n",
-    "        if end:\n",
-    "            n = len(end)\n",
-    "            t1 = token[:-n]\n",
-    "            t2 = token[-n:]\n",
-    "            if not (t1 == 'Mr' and t2 == '.'):\n",
-    "                new_tokens.extend([t1, t2])\n",
-    "                continue\n",
+    "### Grouping\n",
     "\n",
-    "        new_tokens.append(token)\n",
+    "| Syntax | Description |\n",
+    "|:---|:---|\n",
+    "| `[ ]`   | a set of characters |\n",
+    "| `( )`   | a capturing group |\n",
+    "| `(?: )` | a non capturing group |\n",
+    "| `\\|`    | or |\n",
     "\n",
-    "    return new_tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mr.', 'Wayne', 'is', \"n't\", 'the', 'hero', 'we', 'need', ',', 'but', '\"', 'the', 'one', '\"', 'we', 'deserve', '.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "tokenize_strmat_0(text)"
+    "### Repetitions\n",
+    "\n",
+    "| Syntax | Description | Non-greedy |\n",
+    "|:---|:---|:---|\n",
+    "| `.`     | any character except a newline | |\n",
+    "| `*`     | 0 or more repetitions | `*?` |\n",
+    "| `+`     | 1 or more repetitions | `+?` |\n",
+    "| `?`     | 0 or 1 repetitions | `??` |\n",
+    "| `{m}`   | exactly `m` repetitions | |\n",
+    "| `{m,n}` | from `m` to `n` repetitions | `{m,n}?` |\n",
+    "\n",
+    "### Special Characters\n",
+    "\n",
+    "| Syntax | Description |\n",
+    "|:---|:---|\n",
+    "| `^`    | the start of the string | |\n",
+    "| `$`    | the end of the string | |\n",
+    "| `\\num` | the contents of the group of the same number |\n",
+    "| `\\d`   | any decimal digit |\n",
+    "| `\\D`   | any non-decimal-digit character |\n",
+    "| `\\s`   | any whitespace character |\n",
+    "| `\\S`   | any non-whitespace character |\n",
+    "| `\\w`   | any alphanumeric character and the underscore |\n",
+    "| `\\W`   | any non-alphanumeric character |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "## Functions\n",
     "\n",
-    "Let us consider the following example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Ms', '.', 'Wayne', 'is', '\"', 'Batgirl\"', 'but', 'not', '\"', 'the', 'one\"', '.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = 'Ms. Wayne is \"Batgirl\" but not \"the one\".'\n",
-    "print(tokenize_strmat_0(text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* `['Ms', '.']` &rarr; `'Ms.'`\n",
-    "* `'Batgirl\"'` &rarr; `['Batgirl', '\"']`\n",
-    "* `'one\"'` &rarr; `['one', '\"']`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Q: Modify the `tokenize_strmat()` function to handle the above example.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize_strmat_1(text):\n",
-    "    tokens = text.split()\n",
-    "    new_tokens = []\n",
-    "    # to be filled\n",
-    "    return new_tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(tokenize_strmat_1(text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Expected output:\n",
-    "```python\n",
-    "['Ms.', 'Wayne', 'is', '\"', 'Batgirl', '\"', 'but', 'not', '\"', 'the', 'one', '\"', '.']\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Regex Functions\n",
-    "\n",
-    "Regular expressions provide powerful ways to match strings and beyond."
+    "Several functions are provided in Python to match regular expressions."
    ]
   },
   {
@@ -358,14 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
       "<re.Match object; span=(0, 3), match='Mr.'>\n",
       "Mr. 0 3\n"
      ]
@@ -398,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -618,14 +375,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenize with Regex\n",
+    "## Tokenize with Regex\n",
     "\n",
     "Let us define a regular expression that matches the necessary patterns for tokenization:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
+    "### Exercise\n",
     "\n",
     "**Q: Provide examples where `tokenize_regex_0()` breaks and update the function to resolve the issues.**\n",
     "\n",
@@ -751,11 +508,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Case Studies\n",
+    "\n",
+    "* Abbreviation: `Dr.`, `Ph.D.`\n",
+    "* Apostrophy: `'90`, `'cause`\n",
+    "* Concatenation: `don't`, `gonna`, `cannot`\n",
+    "* Hyperlink: `https://github.com/emory-courses/cs329/`\n",
+    "* Hyphen: `New York-based`\n",
+    "* Email: `jinho.choi@emory.edu`\n",
+    "* Emoticon: `:)`, `:-(`\n",
+    "* Number: `1/2`, `123-456-7890`, `1,000,000`\n",
+    "* Unit: `$10`, `5kg`"
+   ]
   }
  ],
  "metadata": {
