--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,10 +132,9 @@
     "import re\n",
     "\n",
     "RE_MR = re.compile(r'M[rs]\\.')\n",
-    "\n",
-    "m = RE_MR.match('Mr.')\n",
+    "m = RE_MR.match('Mr. Wayne')\n",
     "print(m)\n",
-    "print(m.group(), m.start(), m.end())"
+    "if m: print(m.group(), m.start(), m.end())"
    ]
   },
   {
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +188,7 @@
       "<re.Match object; span=(0, 3), match='Ms.'>\n",
       "Ms.\n",
       "('Ms', '.')\n",
-      "Ms .\n"
+      "Ms. Ms .\n"
      ]
     }
    ],
@@ -200,7 +199,7 @@
     "print(m)\n",
     "print(m.group())\n",
     "print(m.groups())\n",
-    "print(m.group(1), m.group(2))"
+    "print(m.group(0), m.group(1), m.group(2))"
    ]
   },
   {
