Update regular expressions and quiz 1

--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -25,13 +25,12 @@
     "  * [findall()](#findall())\n",
     "  * [finditer()](#finditer())\n",
     "* [Tokenization](#Tokenization)\n",
-    "  * [Exercise](#Exercise) \n",
-    "  * [Case Studies](#Case-Studies)"
+    "  * [Exercise](#Exercise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenize with Regex\n",
+    "## Tokenization\n",
     "\n",
     "Let us define a regular expression that matches the necessary patterns for tokenization:"
    ]
@@ -452,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tokenize_regex_0(text):\n",
+    "def tokenize_regex(text):\n",
     "    prev_idx = 0\n",
     "    tokens = []\n",
     "    for m in RE_TOK.finditer(text):\n",
@@ -484,7 +483,7 @@
     }
    ],
    "source": [
-    "print(tokenize_regex_0(text))\n",
+    "print(tokenize_regex(text))\n",
     "\n",
     "text = 'Ms. Wayne is \"Batgirl\" but not \"the one\".'\n",
     "print(tokenize_regex_0(text))"
@@ -496,31 +495,14 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "**Q: Provide examples where `tokenize_regex_0()` breaks and update the function to resolve the issues.**\n",
+    "Define regular expressions to match the following cases:\n",
     "\n",
-    "```python\n",
-    "def tokenize_regex_1(text):\n",
-    "    tokens = []\n",
-    "    # to be filled\n",
-    "    return tokens\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Case Studies\n",
-    "\n",
-    "* Abbreviation: `Dr.`, `Ph.D.`\n",
-    "* Apostrophy: `'90`, `'cause`\n",
+    "* Abbreviation: `Dr.`, `U.S.A.`\n",
+    "* Apostrophy: `'80`, `'90s`, `'cause`\n",
     "* Concatenation: `don't`, `gonna`, `cannot`\n",
     "* Hyperlink: `https://github.com/emory-courses/cs329/`\n",
-    "* Hyphen: `New York-based`\n",
-    "* Email: `jinho.choi@emory.edu`\n",
-    "* Emoticon: `:)`, `:-(`\n",
     "* Number: `1/2`, `123-456-7890`, `1,000,000`\n",
-    "* Unit: `$10`, `5kg`"
+    "* Unit: `$10`, `#20`, `5kg`"
    ]
   }
  ],
