--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,19 +465,56 @@
     "                tokens.append(t)\n",
     "        prev_idx = m.end()\n",
     "\n",
+    "    t = text[prev_idx:].strip()\n",
+    "    if t: tokens.append(t)\n",
     "    return tokens"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are some examples of slicing and strip methods:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mr.', 'Wayne', 'is', \"n't\", 'the', 'hero', 'we', 'need', ',', 'but', '\"', 'the', 'one', '\"', 'we', 'deserve', '.']\n",
+      "True\n",
+      "[   a b c   ]\n",
+      "[a b c]\n",
+      "[a b c   ]\n",
+      "[   a b c]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'adssfdfs'\n",
+    "print(s[0:0] == '')\n",
+    "\n",
+    "s = '   a b c   '\n",
+    "print('[' + s + ']')\n",
+    "print('[' + s.strip() + ']')\n",
+    "print('[' + s.lstrip() + ']')\n",
+    "print('[' + s.rstrip() + ']')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ms.', 'Wayne', 'is', '\"', 'Batgirl', '\"', 'but', 'not', '\"', 'the', 'one', '\"']\n",
       "['Ms.', 'Wayne', 'is', '\"', 'Batgirl', '\"', 'but', 'not', '\"', 'the', 'one', '\"', '.']\n"
      ]
     }
@@ -486,7 +523,29 @@
     "print(tokenize_regex(text))\n",
     "\n",
     "text = 'Ms. Wayne is \"Batgirl\" but not \"the one\".'\n",
-    "print(tokenize_regex_0(text))"
+    "print(tokenize_regex(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mr.', 'Wayne', 'is', \"n't\", 'the', 'hero', 'we', 'need', ',', 'but', '\"', 'the', 'one', '\"', 'we', 'deserve']\n",
+      "['Ms.', 'Wayne', 'is', '\"', 'Batgirl', '\"', 'but', 'not', '\"', 'the', 'one', '\"']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = 'Mr. Wayne isn\\'t the hero we need, but \"the one\" we deserve'\n",
+    "print(tokenize_regex(text))\n",
+    "\n",
+    "text = 'Ms. Wayne is \"Batgirl\" but not \"the one\"'\n",
+    "print(tokenize_regex(text))"
    ]
   },
   {
