Update ontology and taxonomy

--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
     }
    ],
    "source": [
-    "s = 'adssfdfs'\n",
+    "s = 'abc'\n",
     "print(s[0:0] == '')\n",
     "\n",
     "s = '   a b c   '\n",
