Update ontology and taxonomy

--- a/doc/ontology_taxonomy.ipynb
+++ b/doc/ontology_taxonomy.ipynb
@@ -398,7 +398,10 @@
     "    :return: the lemma set of all synonyms of the specific word.\n",
     "    \"\"\"\n",
     "    # To be filled\n",
-    "```"
+    "```\n",
+    "\n",
+    "* [Default arguments in Python](https://docs.python.org/3.9/tutorial/controlflow.html#default-argument-values)\n",
+    "* [Typing in Python](https://docs.python.org/3/library/typing.html)"
    ]
   },
   {
