Update ontology and taxonomy

--- a/doc/ontology_taxonomy.ipynb
+++ b/doc/ontology_taxonomy.ipynb
@@ -24,12 +24,15 @@
     "  * [Antonyms](#Antonyms)\n",
     "  * [Lexical Relations](#Lexical-Relations)\n",
     "  * [Hyponyms](#Hyponyms)\n",
-    "  * [Hypernyms](#Hypernyms)"
+    "  * [Hypernyms](#Hypernyms)\n",
+    "  * [Similarities](#Similarities)\n",
+    "  * [Entailments](#Entailments)\n",
+    "  * [Troponyms](#Troponyms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to /Users/jdchoi/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -138,7 +141,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +187,7 @@
        " Synset('moderate.v.01')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +224,7 @@
        " Synset('chair.n.05')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +291,7 @@
        " Lemma('dog.n.01.Canis_familiaris')]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +320,7 @@
        "['dog', 'domestic_dog', 'Canis_familiaris']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,39 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Canis_familiaris',\n",
-       " 'andiron',\n",
-       " 'blackguard',\n",
-       " 'bounder',\n",
-       " 'cad',\n",
-       " 'click',\n",
-       " 'detent',\n",
-       " 'dog',\n",
-       " 'dog-iron',\n",
-       " 'domestic_dog',\n",
-       " 'firedog',\n",
-       " 'frank',\n",
-       " 'frankfurter',\n",
-       " 'frump',\n",
-       " 'heel',\n",
-       " 'hot_dog',\n",
-       " 'hotdog',\n",
-       " 'hound',\n",
-       " 'pawl',\n",
-       " 'weenie',\n",
-       " 'wiener',\n",
-       " 'wienerwurst'}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'synonyms' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-f28124382e1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msynonyms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dog'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'synonyms' is not defined"
+     ]
     }
    ],
    "source": [
@@ -447,40 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dog', 'hound'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "synonyms('dog', 'n', 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'chase', 'dog', 'go_after', 'hound', 'track', 'trail'}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "synonyms('dog', count=1)"
    ]
@@ -496,18 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "buy [Lemma('sell.v.01.sell')]\n",
-      "purchase []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "buy = wn.synset('buy.v.01')\n",
     "for l in buy.lemmas():\n",
@@ -528,7 +480,7 @@
     "* Hypernym\n",
     "* Meronym\n",
     "\n",
-    "https://speakerdeck.com/emory/lexical-relations"
+    "Slides: https://www.slideshare.net/jchoi7s/cs329-lexical-relations"
    ]
   },
   {
@@ -555,81 +507,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Synset('armchair.n.01'),\n",
-       " Synset('barber_chair.n.01'),\n",
-       " Synset('chair_of_state.n.01'),\n",
-       " Synset('chaise_longue.n.01'),\n",
-       " Synset('eames_chair.n.01'),\n",
-       " Synset('fighting_chair.n.01'),\n",
-       " Synset('folding_chair.n.01'),\n",
-       " Synset('highchair.n.01'),\n",
-       " Synset('ladder-back.n.01'),\n",
-       " Synset('lawn_chair.n.01'),\n",
-       " Synset('rocking_chair.n.01'),\n",
-       " Synset('straight_chair.n.01'),\n",
-       " Synset('swivel_chair.n.01'),\n",
-       " Synset('tablet-armed_chair.n.01'),\n",
-       " Synset('wheelchair.n.01')]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chair_0.hyponyms()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Synset('basenji.n.01'),\n",
-       " Synset('corgi.n.01'),\n",
-       " Synset('cur.n.01'),\n",
-       " Synset('dalmatian.n.02'),\n",
-       " Synset('great_pyrenees.n.01'),\n",
-       " Synset('griffon.n.02'),\n",
-       " Synset('hunting_dog.n.01'),\n",
-       " Synset('lapdog.n.01'),\n",
-       " Synset('leonberg.n.01'),\n",
-       " Synset('mexican_hairless.n.01'),\n",
-       " Synset('newfoundland.n.01'),\n",
-       " Synset('pooch.n.01'),\n",
-       " Synset('poodle.n.01'),\n",
-       " Synset('pug.n.01'),\n",
-       " Synset('puppy.n.01'),\n",
-       " Synset('spitz.n.01'),\n",
-       " Synset('toy_dog.n.01'),\n",
-       " Synset('working_dog.n.01')]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dog_0.hyponyms()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Troponyms\n",
-    "\n"
    ]
   },
   {
@@ -643,40 +534,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Synset('seat.n.03')]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chair_0.hypernyms()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Synset('canine.n.02'), Synset('domestic_animal.n.01')]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dog_0.hypernyms()"
    ]
@@ -690,71 +559,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[Synset('entity.n.01'),\n",
-       "  Synset('physical_entity.n.01'),\n",
-       "  Synset('object.n.01'),\n",
-       "  Synset('whole.n.02'),\n",
-       "  Synset('artifact.n.01'),\n",
-       "  Synset('instrumentality.n.03'),\n",
-       "  Synset('furnishing.n.02'),\n",
-       "  Synset('furniture.n.01'),\n",
-       "  Synset('seat.n.03'),\n",
-       "  Synset('chair.n.01')]]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chair_0.hypernym_paths()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[Synset('entity.n.01'),\n",
-       "  Synset('physical_entity.n.01'),\n",
-       "  Synset('object.n.01'),\n",
-       "  Synset('whole.n.02'),\n",
-       "  Synset('living_thing.n.01'),\n",
-       "  Synset('organism.n.01'),\n",
-       "  Synset('animal.n.01'),\n",
-       "  Synset('chordate.n.01'),\n",
-       "  Synset('vertebrate.n.01'),\n",
-       "  Synset('mammal.n.01'),\n",
-       "  Synset('placental.n.01'),\n",
-       "  Synset('carnivore.n.01'),\n",
-       "  Synset('canine.n.02'),\n",
-       "  Synset('dog.n.01')],\n",
-       " [Synset('entity.n.01'),\n",
-       "  Synset('physical_entity.n.01'),\n",
-       "  Synset('object.n.01'),\n",
-       "  Synset('whole.n.02'),\n",
-       "  Synset('living_thing.n.01'),\n",
-       "  Synset('organism.n.01'),\n",
-       "  Synset('animal.n.01'),\n",
-       "  Synset('domestic_animal.n.01'),\n",
-       "  Synset('dog.n.01')]]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dog_0.hypernym_paths()"
    ]
@@ -770,22 +586,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Synset('carnivore.n.01')]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dog = wn.synset('dog.n.01')\n",
     "cat = wn.synset('cat.n.01')\n",
@@ -802,27 +607,119 @@
     "\n",
     "```python\n",
     "def lch_paths(sense_0: str, sense_1: str) -> List[List[Synset]]:\n",
-    "    # To be filled\n",
+    "    \"\"\"\n",
+    "    :param sense_0: the ID of the first sense.\n",
+    "    :param sense_1: the ID of the second sense.\n",
+    "    :return: the list of LCH paths where each LCH path shows the path from the LCD to its root.\n",
+    "    \"\"\"\n",
+    "    # To be updated\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = lch_paths('dog.n.01', 'cat.n.01')\n",
+    "for path in paths:\n",
+    "    print(' -> '.join([syn.name() for syn in path]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Similarities\n",
+    "\n",
+    "How to measure the similarity between two senses?\n",
+    "\n",
+    "Slides: https://www.slideshare.net/jchoi7s/cs329-wordnet-similarities\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "* [Verb Semantics and Lexical Selection](https://www.aclweb.org/anthology/P94-1019/), Wu and Palmer, 1994.\n",
+    "* [Using Information Content to Evaluate Semantic Similarity in a Taxonomy](https://arxiv.org/abs/cmp-lg/9511007), Resnik, 1995.\n",
+    "* [Semantic Similarity Based on Corpus Statistics and Lexical Taxonomy](https://www.aclweb.org/anthology/O97-1002/), Jiang and Conrath, 1997\n",
+    "* [Combining Local Context and Wordnet Similarity for Word Sense Identification](https://ieeexplore.ieee.org/document/6287675/authors#authors),  Fellbaum and Miller, 1998.\n",
+    "* [An Information-Theoretic Definition of Similarity](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.55.1832), Lin, 1998."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entity.n.01 -> physical_entity.n.01 -> object.n.01 -> whole.n.02 -> living_thing.n.01 -> organism.n.01 -> animal.n.01 -> chordate.n.01 -> vertebrate.n.01 -> mammal.n.01 -> placental.n.01 -> carnivore.n.01\n"
+      "PTH: 0.2\n",
+      "LCH: 2.0281482472922856\n",
+      "WUP: 0.8571428571428571\n"
      ]
     }
    ],
    "source": [
-    "paths = lch_paths('dog.n.01', 'cat.n.01')\n",
-    "for path in paths:\n",
-    "    print(' -> '.join([syn.name() for syn in path]))"
+    "print('PTH: {}'.format(dog.path_similarity(cat)))\n",
+    "print('LCH: {}'.format(dog.lch_similarity(cat)))\n",
+    "print('WUP: {}'.format(dog.wup_similarity(cat)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entailments\n",
+    "\n",
+    "If (`V1` is true), then (`V2` must be true):\n",
+    "* If (A is **snoring**), then (A must be **sleeping**)\n",
+    "\n",
+    "Unless `V1` and `V2` are synonyms, the converse is not true\n",
+    "* If (A is **sleeping**), then (A must be **snoring**)\n",
+    "\n",
+    "The contradiction is true\n",
+    "* If (A is **not sleeping**), then (A must **not** be **snoring**)\n",
+    "\n",
+    "Temporal inclusion\n",
+    "* `T(V1)` &sube; `T(V2)`: If (A is **snoring**), then (A must be **sleeping**).\n",
+    "* `T(V1)` &supe; `T(V2)`: If (A **bought** B), then (A must have **paid** for B).\n",
+    "* `T(V1)` = `T(V2)`: If (A is **marching**), then (A must be **walking**)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('sleep.v.01')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# wn.entailments('snore.v.01')\n",
+    "snore_ents = wn.synset('snore.v.01').entailments()\n",
+    "snore_ents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Troponyms\n",
+    "\n",
+    "(To `V1`) is (to `V2`) in some particular manner.\n",
+    "\n",
+    "* (To **shout**) is (to **talk**) _loud_.\n",
+    "* (To **amble**) is (to **walk**) in _slow, relaxed manner_."
    ]
   }
  ],
